Move nvgpu power node to subdirectory as well
Change-Id: Id4245341e64b283d8f36a04b0c34a879db63469c

--- a/initfiles/ueventd.t186ref.rc
+++ b/initfiles/ueventd.t186ref.rc
@@ -247,6 +247,9 @@ subsystem video4linux
 subsystem nvidia-gpu-v2
 	devname uevent_devpath
 	dirname /dev/nvgpu/igpu0
+subsystem nvidia-gpu-v2-power
+	devname uevent_devpath
+	dirname /dev/nvgpu/igpu0
 
 #Factory Reset Protection
 /dev/block/platform/sdhci-tegra.3/by-name/RP2		0660	system	system
