--- a/initfiles/ueventd.t186ref.rc
+++ b/initfiles/ueventd.t186ref.rc
@@ -276,4 +276,4 @@ subsystem nvidia-gpu-v2-power
 /sys/devices/system/cpu*   online   0664  system system
 
 # vdd-pre-reg regulator node
-/sys/class/regulator/regulator.5/microvolts	0664 system system
+/sys/class/regulator/regulator.5	microvolts	0664 system system
