uevent: Add bluedroid rfkill entries
Change-Id: I85d0c3d07d00f757b3c43b5fa83aa3a0d3a8d3d9

--- a/initfiles/ueventd.t186ref.rc
+++ b/initfiles/ueventd.t186ref.rc
@@ -280,3 +280,6 @@ subsystem nvidia-gpu-v2-power
 
 # vdd-pre-reg regulator node
 /sys/class/regulator/regulator.5	microvolts	0664 system system
+
+/sys/devices/bluedroid_pm/rfkill/rfkill* state 0664 bluetooth bluetooth
+/sys/devices/bluedroid_pm/rfkill/rfkill* type 0664 bluetooth bluetooth
